k8s-node-ns-backup-20251003-133735/namespaces/default/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      email: support@mongodb.com
      meta.helm.sh/release-name: community-operator
      meta.helm.sh/release-namespace: default
    creationTimestamp: "2025-02-10T09:01:30Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
      owner: mongodb
    name: mongodb-kubernetes-operator
    namespace: default
    resourceVersion: "72238802"
    uid: be6d64ee-a283-4974-a6bb-ee1fef8198d7
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        name: mongodb-kubernetes-operator
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: mongodb-kubernetes-operator
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: name
                  operator: In
                  values:
                  - mongodb-kubernetes-operator
              topologyKey: kubernetes.io/hostname
        containers:
        - command:
          - /usr/local/bin/entrypoint
          env:
          - name: WATCH_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          - name: OPERATOR_NAME
            value: mongodb-kubernetes-operator
          - name: AGENT_IMAGE
            value: quay.io/mongodb/mongodb-agent-ubi:108.0.2.8729-1
          - name: VERSION_UPGRADE_HOOK_IMAGE
            value: quay.io/mongodb/mongodb-kubernetes-operator-version-upgrade-post-start-hook:1.0.9
          - name: READINESS_PROBE_IMAGE
            value: quay.io/mongodb/mongodb-kubernetes-readinessprobe:1.0.22
          - name: MONGODB_IMAGE
            value: mongodb-community-server
          - name: MONGODB_REPO_URL
            value: docker.io/mongodb
          - name: MDB_IMAGE_TYPE
            value: ubi8
          image: quay.io/mongodb/mongodb-kubernetes-operator:0.12.0
          imagePullPolicy: Always
          name: mongodb-kubernetes-operator
          resources:
            limits:
              cpu: 1100m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          runAsNonRoot: true
          runAsUser: 2000
        serviceAccount: mongodb-kubernetes-operator
        serviceAccountName: mongodb-kubernetes-operator
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-02-10T09:01:32Z"
      lastUpdateTime: "2025-02-10T09:01:32Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-02-10T09:01:32Z"
      lastUpdateTime: "2025-02-10T09:01:40Z"
      message: ReplicaSet "mongodb-kubernetes-operator-7b7b59cc5c" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
