k8s-node-ns-backup-20251003-133735/namespaces/default/pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2025-05-30T10:56:50Z"
    generateName: mongodb-kubernetes-operator-7b7b59cc5c-
    labels:
      name: mongodb-kubernetes-operator
      pod-template-hash: 7b7b59cc5c
    name: mongodb-kubernetes-operator-7b7b59cc5c-7mmfb
    namespace: default
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: mongodb-kubernetes-operator-7b7b59cc5c
      uid: 2ee30a8a-4784-4f5e-a810-22c666cd85a5
    resourceVersion: "72238800"
    uid: 0a4bc8b6-d47d-45eb-afc8-50151434d90c
  spec:
    affinity:
      podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
            - key: name
              operator: In
              values:
              - mongodb-kubernetes-operator
          topologyKey: kubernetes.io/hostname
    containers:
    - command:
      - /usr/local/bin/entrypoint
      env:
      - name: WATCH_NAMESPACE
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.namespace
      - name: POD_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.name
      - name: OPERATOR_NAME
        value: mongodb-kubernetes-operator
      - name: AGENT_IMAGE
        value: quay.io/mongodb/mongodb-agent-ubi:108.0.2.8729-1
      - name: VERSION_UPGRADE_HOOK_IMAGE
        value: quay.io/mongodb/mongodb-kubernetes-operator-version-upgrade-post-start-hook:1.0.9
      - name: READINESS_PROBE_IMAGE
        value: quay.io/mongodb/mongodb-kubernetes-readinessprobe:1.0.22
      - name: MONGODB_IMAGE
        value: mongodb-community-server
      - name: MONGODB_REPO_URL
        value: docker.io/mongodb
      - name: MDB_IMAGE_TYPE
        value: ubi8
      image: quay.io/mongodb/mongodb-kubernetes-operator:0.12.0
      imagePullPolicy: Always
      name: mongodb-kubernetes-operator
      resources:
        limits:
          cpu: 1100m
          memory: 1Gi
        requests:
          cpu: 500m
          memory: 200Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-x9g6q
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: zee8608workerapi01
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      runAsNonRoot: true
      runAsUser: 2000
    serviceAccount: mongodb-kubernetes-operator
    serviceAccountName: mongodb-kubernetes-operator
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-x9g6q
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:34:55Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-05-30T10:57:20Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:34:55Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:34:55Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-05-30T10:56:50Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://4c9d9224df5e999bc69f274811dfbb7ce285acf7dbe6ebf6ca42eed8090b7237
      image: quay.io/mongodb/mongodb-kubernetes-operator:0.12.0
      imageID: quay.io/mongodb/mongodb-kubernetes-operator@sha256:f529e6365d11392f4a6178471a2e65515fd9169e4395a4eb5725ba119744d6e0
      lastState: {}
      name: mongodb-kubernetes-operator
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-06-23T16:34:55Z"
    hostIP: 10.48.219.138
    hostIPs:
    - ip: 10.48.219.138
    phase: Running
    podIP: 192.168.5.216
    podIPs:
    - ip: 192.168.5.216
    qosClass: Burstable
    startTime: "2025-05-30T10:57:20Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      agent.mongodb.com/version: "9"
    creationTimestamp: "2025-06-23T16:34:56Z"
    generateName: productmaster-mongodb-
    labels:
      app: productmaster-mongodb-svc
      apps.kubernetes.io/pod-index: "0"
      controller-revision-hash: productmaster-mongodb-55d6fcd77f
      statefulset.kubernetes.io/pod-name: productmaster-mongodb-0
    name: productmaster-mongodb-0
    namespace: default
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: StatefulSet
      name: productmaster-mongodb
      uid: 42e69253-d5c8-4b50-b845-6cbc20245629
    resourceVersion: "72241892"
    uid: 351eda94-88be-4bd4-8055-b01688cc1df2
  spec:
    containers:
    - args:
      - ""
      command:
      - /bin/sh
      - -c
      - "\nif [ -e \"/hooks/version-upgrade\" ]; then\n\t#run post-start hook to handle
        version changes (if exists)\n    /hooks/version-upgrade\nfi\n\n# wait for
        config and keyfile to be created by the agent\nwhile ! [ -f /data/automation-mongod.conf
        -a -f /var/lib/mongodb-mms-automation/authentication/keyfile ]; do sleep 3
        ; done ; sleep 2 ;\n\n# start mongod with this configuration\nexec mongod
        -f /data/automation-mongod.conf;\n\n"
      env:
      - name: AGENT_STATUS_FILEPATH
        value: /healthstatus/agent-health-status.json
      image: docker.io/mongodb/mongodb-community-server:7.0.2-ubi8
      imagePullPolicy: IfNotPresent
      name: mongod
      resources:
        limits:
          cpu: "1"
          memory: 500M
        requests:
          cpu: 500m
          memory: 400M
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /data
        name: data-volume
      - mountPath: /healthstatus
        name: healthstatus
      - mountPath: /hooks
        name: hooks
      - mountPath: /var/log/mongodb-mms-automation
        name: logs-volume
      - mountPath: /var/lib/mongodb-mms-automation/authentication
        name: productmaster-mongodb-keyfile
      - mountPath: /tmp
        name: tmp
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-7k7ll
        readOnly: true
    - command:
      - /bin/bash
      - -c
      - |-
        current_uid=$(id -u)
        declare -r current_uid
        if ! grep -q "${current_uid}" /etc/passwd ; then
        sed -e "s/^mongodb:/builder:/" /etc/passwd > /tmp/passwd
        echo "mongodb:x:$(id -u):$(id -g):,,,:/:/bin/bash" >> /tmp/passwd
        export NSS_WRAPPER_PASSWD=/tmp/passwd
        export LD_PRELOAD=libnss_wrapper.so
        export NSS_WRAPPER_GROUP=/etc/group
        fi
        agent/mongodb-agent -healthCheckFilePath=/var/log/mongodb-mms-automation/healthstatus/agent-health-status.json -serveStatusPort=5000 -cluster=/var/lib/automation/config/cluster-config.json -skipMongoStart -noDaemonize -useLocalMongoDbTools -logFile /var/log/mongodb-mms-automation/automation-agent.log -logLevel INFO -maxLogFileDurationHrs 24
      env:
      - name: AGENT_STATUS_FILEPATH
        value: /var/log/mongodb-mms-automation/healthstatus/agent-health-status.json
      - name: AUTOMATION_CONFIG_MAP
        value: productmaster-mongodb-config
      - name: HEADLESS_AGENT
        value: "true"
      - name: POD_NAMESPACE
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.namespace
      image: quay.io/mongodb/mongodb-agent-ubi:108.0.2.8729-1
      imagePullPolicy: Always
      name: mongodb-agent
      readinessProbe:
        exec:
          command:
          - /opt/scripts/readinessprobe
        failureThreshold: 40
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          cpu: "1"
          memory: 500M
        requests:
          cpu: 500m
          memory: 400M
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /opt/scripts
        name: agent-scripts
      - mountPath: /var/lib/automation/config
        name: automation-config
        readOnly: true
      - mountPath: /data
        name: data-volume
      - mountPath: /var/log/mongodb-mms-automation/healthstatus
        name: healthstatus
      - mountPath: /var/log/mongodb-mms-automation
        name: logs-volume
      - mountPath: /var/lib/mongodb-mms-automation/authentication
        name: productmaster-mongodb-keyfile
      - mountPath: /tmp
        name: tmp
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-7k7ll
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    hostname: productmaster-mongodb-0
    initContainers:
    - command:
      - cp
      - version-upgrade-hook
      - /hooks/version-upgrade
      image: quay.io/mongodb/mongodb-kubernetes-operator-version-upgrade-post-start-hook:1.0.9
      imagePullPolicy: Always
      name: mongod-posthook
      resources:
        limits:
          cpu: "1"
          memory: 500M
        requests:
          cpu: 500m
          memory: 400M
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /hooks
        name: hooks
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-7k7ll
        readOnly: true
    - command:
      - cp
      - /probes/readinessprobe
      - /opt/scripts/readinessprobe
      image: quay.io/mongodb/mongodb-kubernetes-readinessprobe:1.0.22
      imagePullPolicy: Always
      name: mongodb-agent-readinessprobe
      resources:
        limits:
          cpu: "1"
          memory: 500M
        requests:
          cpu: 500m
          memory: 400M
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /opt/scripts
        name: agent-scripts
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-7k7ll
        readOnly: true
    nodeName: zee8608workerapi01
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 2000
      runAsNonRoot: true
      runAsUser: 2000
    serviceAccount: mongodb-database
    serviceAccountName: mongodb-database
    subdomain: productmaster-mongodb-svc
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: logs-volume
      persistentVolumeClaim:
        claimName: logs-volume-productmaster-mongodb-0
    - name: data-volume
      persistentVolumeClaim:
        claimName: data-volume-productmaster-mongodb-0
    - emptyDir: {}
      name: agent-scripts
    - name: automation-config
      secret:
        defaultMode: 416
        secretName: productmaster-mongodb-config
    - emptyDir: {}
      name: healthstatus
    - emptyDir: {}
      name: hooks
    - emptyDir: {}
      name: productmaster-mongodb-keyfile
    - emptyDir: {}
      name: tmp
    - name: kube-api-access-7k7ll
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:39:39Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:40:15Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:41:10Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:41:10Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-06-23T16:39:19Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://bdec309df088fe26c36e03a21faa952b4a56169b629d7e4a90c941b6eb3e66f5
      image: docker.io/mongodb/mongodb-community-server:7.0.2-ubi8
      imageID: docker.io/mongodb/mongodb-community-server@sha256:a66c0a69128bc706d7fa91996371dcffc5b5438106471a8c0ede507a796ed37b
      lastState: {}
      name: mongod
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-06-23T16:40:15Z"
    - containerID: containerd://0f625f6c75f0892b7786f00a9b08cb64692861882d0b562bf855355480e47fe2
      image: quay.io/mongodb/mongodb-agent-ubi:108.0.2.8729-1
      imageID: quay.io/mongodb/mongodb-agent-ubi@sha256:98815e8eecc2b366cdf0589a5a7d68bc14e82477f48d24da90064175cead6c24
      lastState: {}
      name: mongodb-agent
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-06-23T16:40:45Z"
    hostIP: 10.48.219.138
    hostIPs:
    - ip: 10.48.219.138
    initContainerStatuses:
    - containerID: containerd://5a022921ff8e18f706b621e34fcd6a92efb813afad4a53f57a6eb9a194811b3d
      image: quay.io/mongodb/mongodb-kubernetes-operator-version-upgrade-post-start-hook:1.0.9
      imageID: quay.io/mongodb/mongodb-kubernetes-operator-version-upgrade-post-start-hook@sha256:22ba1fb78ccdc7687a058776a72f34bd6714e24abaf2ee5329b31c88ae74cd3b
      lastState: {}
      name: mongod-posthook
      ready: true
      restartCount: 0
      started: false
      state:
        terminated:
          containerID: containerd://5a022921ff8e18f706b621e34fcd6a92efb813afad4a53f57a6eb9a194811b3d
          exitCode: 0
          finishedAt: "2025-06-23T16:39:39Z"
          reason: Completed
          startedAt: "2025-06-23T16:39:39Z"
    - containerID: containerd://aaefa1ba95484119875959228d5e464a4db0a3abb9c155b981f1d8fcaf6eec24
      image: quay.io/mongodb/mongodb-kubernetes-readinessprobe:1.0.22
      imageID: quay.io/mongodb/mongodb-kubernetes-readinessprobe@sha256:0aeb9ed45626241375b042738da2f7dbc837d0b1a54725a27bca77e2aa4b0163
      lastState: {}
      name: mongodb-agent-readinessprobe
      ready: true
      restartCount: 0
      started: false
      state:
        terminated:
          containerID: containerd://aaefa1ba95484119875959228d5e464a4db0a3abb9c155b981f1d8fcaf6eec24
          exitCode: 0
          finishedAt: "2025-06-23T16:40:08Z"
          reason: Completed
          startedAt: "2025-06-23T16:40:08Z"
    phase: Running
    podIP: 192.168.5.230
    podIPs:
    - ip: 192.168.5.230
    qosClass: Burstable
    startTime: "2025-06-23T16:39:19Z"
kind: List
metadata:
  resourceVersion: ""
